crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_fold__byte_slice.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_fold.rs
expression: fixture.snapshot()
---
--- unoptimized Core
sliceByteString 1 2 (con bytestring #61626364)
--- unoptimized UPLC
(program 1.1.0
  [[[(builtin sliceByteString) (con integer 1)] (con integer 2)]
    (con bytestring #61626364)])
--- optimized Core
(con bytestring #6263)
--- optimized UPLC
(program 1.1.0 (con bytestring #6263))
--- result
(con bytestring #6263)
--- logs
[]
--- budget
cpu: 132568, memory: 804
