crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_fold__data_equal.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_fold.rs
expression: fixture.snapshot()
---
--- unoptimized Core
equalsData (con data (I 7)) (con data (I 7))
--- unoptimized UPLC
(program 1.1.0 [[(builtin equalsData) (con data (I 7))] (con data (I 7))])
--- optimized Core
equalsData (con data (I 7)) (con data (I 7))
--- optimized UPLC
(program 1.1.0 [[(builtin equalsData) (con data (I 7))] (con data (I 7))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 1114643, memory: 601
