crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_fold__decode_integer_data.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_fold.rs
expression: fixture.snapshot()
---
--- unoptimized Core
unIData (con data (I 7))
--- unoptimized UPLC
(program 1.1.0 [(builtin unIData) (con data (I 7))])
--- optimized Core
7
--- optimized UPLC
(program 1.1.0 (con integer 7))
--- result
(con integer 7)
--- logs
[]
--- budget
cpu: 68844, memory: 432
